# horse-math

./: .gitignore  CLAUDE.md  CNAME  LICENSE  LIMITATIONS.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
analysis/: derby-2026-cheatsheet.md  derby-2026-postmortem.md  derby-2026-readout.md  derby-2026-wagering.md
analysis/case-studies/2026-kentucky-derby/: README.md  cheatsheet.md  postmortem.md  readout.md  wagering.md  why-golden-tempo.md
data/parsed/: exacta_overlays.csv  exacta_probables.txt  field.csv  live_odds.csv  overlays.csv  past_performances.csv
data/races/2026-kentucky-derby/: config.toml  exacta_overlays.csv  overlays.csv  portfolio.csv  trifecta_overlays.csv  trifecta_probables.txt
data/races/2026-preakness/: config.toml
docs/: ARCHITECTURE.md
learnings/: 2026-kentucky-derby.md  index.md
overrides/: main.html
prompts/: derby-day.md
scripts/: build_docs.sh  make_gt_chart.py  make_og_image.py
src/: charts.py  exacta.py  fetch_odds.py  fit_weights.py  handicap.py  portfolio.py  race_config.py  sensitivity.py  trifecta.py
tests/: test_derby_regression.py
